--- a/snippets/bold-pr.liquid
+++ b/snippets/bold-pr.liquid
@@ -28,4 +28,4 @@
     }
 </style>
 
-{{ 'https://static.boldcommerce.com/bold-platform/sf/pr.js' | script_tag }}
+<script data-src="https://static.boldcommerce.com/bold-platform/sf/pr.js" type="lazyload_int"></script>
