--- a/snippets/judgeme_core.liquid
+++ b/snippets/judgeme_core.liquid
@@ -4,7 +4,7 @@
 {% endcomment %}
 <!-- Start of Judge.me Core -->
 <link rel="dns-prefetch" href="https://cdn.judge.me/">
-{{ shop.metafields.judgeme.settings }}
+{{ shop.metafields.judgeme.settings | replace: '<script data-cfasync="false" type="text/javascript" async src="', '<script data-cfasync="false" type="lazyload_int" data-src="' | replace: 'type="text/css" media="nope!" onload="this.media=', '' | replace: "'all'", "" | replace: '" href="', 'data-href="' }}
 {% for count in (0..5) %}
   {% assign metafield_key = 'html_miracle_' | append: count %}
   {% assign current_metafield = shop.metafields.judgeme[metafield_key] %}
@@ -25,7 +25,7 @@ jdgm.loadCSS.requestedUrls=[],jdgm.docReady(function(){(window.jdgmLoadCSS||e.qu
 parseFloat(jdgmSettings.widget_version)>=3?jdgm.loadCSS(jdgm.CDN_HOST+"widget_v3/base.css"):
 jdgm.loadCSS(jdgm.CDN_HOST+"widget/base.css"):jdgm.loadCSS(jdgm.CDN_HOST+"shopify_v2.css"))})}(document);
 </script>
-<script async data-cfasync="false" type="text/javascript" src="https://cdn.judge.me/loader.js"></script>
+<script data-cfasync="false" type="lazyload_int" data-src="https://cdn.judge.me/loader.js"></script>
 
 <noscript><link rel="stylesheet" type="text/css" media="all" href="https://cdn.judge.me/shopify_v2.css"></noscript>
 <!-- End of Judge.me Core -->
