--- a/snippets/load-metafields.liquid
+++ b/snippets/load-metafields.liquid
@@ -4,7 +4,7 @@
 
 {% if data.size > 0 and cookieData._bc_c_set.live == '1' and content_for_header contains 'app.gdpr-legal-cookie.com\/get-script.php' %}
 
-    <script>
+    <script type="lazyload_int">
         var sDomain = location.host;
 
         /****** Start thirdPartyScriptDefinition ******/
