--- a/snippets/weglot_switcher.liquid
+++ b/snippets/weglot_switcher.liquid
@@ -1,4 +1,4 @@
 <!--Start Weglot Script-->
-<script src="https://cdn.weglot.com/weglot.min.js"></script>
-<script id="has-script-tags">Weglot.initialize({ api_key:"wg_439fb771550217fa83d748268ee9f1295" });</script>
+<script type="lazyload_int" data-src="https://cdn.weglot.com/weglot.min.js"></script>
+<script type="lazyload_int" id="has-script-tags">Weglot.initialize({ api_key:"wg_439fb771550217fa83d748268ee9f1295" });</script>
 <!--End Weglot Script-->
