--- a/snippets/image-element.liquid
+++ b/snippets/image-element.liquid
@@ -91,15 +91,17 @@ max_height: <number>
         {% if low_quality_image %}
           src="{{ low_quality_image }}"
         {% endif %}
+        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-class="LazyLoad" 
+        data-mob-src="{{ image | img_url: '400x' }}"
         data-src="{{ image | img_url: '1600x' }}"
+        
         data-sizes="auto"
         data-aspectratio="{{ image.width }}/{{ image.height }}"
-        data-srcset="{{ srcset }}"
+        datalate-srcset="{{ srcset }}"
         height="{{ image.height }}"
         width="{{ image.width }}"
         style="{{ inline_style }};"
-        class="lazyload transition--{{ settings.image_loading_style }} {{ additional_classes }}"
-        srcset="data:image/svg+xml;utf8,<svg%20xmlns='http://www.w3.org/2000/svg'%20width='{{ image.width }}'%20height='{{ image.height }}'></svg>"
+        class="lazyloaded transition--{{ settings.image_loading_style }} {{ additional_classes }}"
   />
 </div>
 {% endif %}
