--- a/snippets/product-images.liquid
+++ b/snippets/product-images.liquid
@@ -73,7 +73,11 @@
               data-product-gallery>
 
     {% for media in product.media %}
-      <div class="gallery-cell" data-product-id="{{ product.id }}" data-media-type="{% if media.alt contains 'youtube' or media.alt contains 'vimeo' %}external_video{% else %}{{ media.media_type }}{% endif %}" data-thumb="{{ image_large }}" data-title="{% if image_alt contains 'youtube' or image_alt contains 'vimeo' %}{{ product.title }}{% else %}{{ image_alt | escape }}{% endif %}">
+      {% assign media_is_selected = false %}
+        {% if product.selected_or_first_available_variant.featured_media.id == media.id or product.variants.size == 1 %}
+          {% assign media_is_selected = true %}
+      {% endif %}
+      <div class="gallery-cell {% if media_is_selected %}isShow{% endif %}" data-product-id="{{ product.id }}" data-media-type="{% if media.alt contains 'youtube' or media.alt contains 'vimeo' %}external_video{% else %}{{ media.media_type }}{% endif %}" data-thumb="{{ image_large }}" data-title="{% if image_alt contains 'youtube' or image_alt contains 'vimeo' %}{{ product.title }}{% else %}{{ image_alt | escape }}{% endif %}">
         {% case media.media_type %}
           {% when 'image' %}
 
@@ -113,13 +117,15 @@
                 {% if product.images.size > 0 %}
                   <img  data-zoom-src="{{ image_5000x }}"
                         alt="{{ image_alt | escape }}"
-                        class=" lazyload {{ settings.image_loading_style }}"
+                        class="lazyload {{ settings.image_loading_style }}"
                         data-image-id="{{ product.media[forloop.index0].id }}"
                         data-index="{{ forloop.index0 }}"
                         data-sizes="{% if gallery_click_to_zoom %}100vw{% else %}auto{% endif %}"
                         data-aspectratio="{{ media.width }}/{{ media.height }}"
+                        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-class="LazyLoad" 
                         data-src="{{ media | img_url: '1200x' }}"
-                        data-srcset=" {{ image_200x }} 200w,
+                        data-mob-src="{{ media | img_url: '400x' }}"
+                        datalate-srcset=" {{ image_200x }} 200w,
                                       {{ image_400x }} 400w,
                                       {{ image_600x }} 600w,
                                       {{ image_800x }} 800w,
@@ -127,7 +133,6 @@
                                       {{ image_2000x }} 2000w"
                         height="{{ media.height }}"
                         width="{{ media.width }}"
-                        srcset="data:image/svg+xml;utf8,<svg%20xmlns='http://www.w3.org/2000/svg'%20width='{{ media.width }}'%20height='{{ media.height }}'></svg>"
                         />
                 {% else %}
                   <img src="{{ image | img_url: 'master' }}" />
