--- a/snippets/product.liquid
+++ b/snippets/product.liquid
@@ -494,8 +494,8 @@ max-height: {{ product_height }}px;
 </script>
 {% endif %}
 
-<script defer src="https://cdn.shopify.com/shopifycloud/shopify-xr-js/assets/v1.0/shopify-xr.en.js"></script>
-<script defer src="https://cdn.shopify.com/shopifycloud/model-viewer-ui/assets/v1.0/model-viewer-ui.en.js"></script>
+<script type="lazyload_int" data-src="https://cdn.shopify.com/shopifycloud/shopify-xr-js/assets/v1.0/shopify-xr.en.js"></script>
+<script type="lazyload_int" data-src="https://cdn.shopify.com/shopifycloud/model-viewer-ui/assets/v1.0/model-viewer-ui.en.js"></script>
 {% endif %}
 <style>
   summary.summary_default {
